<resources>
    <string name="app_name">KP Movies</string>
    <string name="nickname_hint">Nickname</string>
    <string name="home_page">Home page</string>
    <string name="watch_list">Watch list</string>
    <string name="friends">Friends</string>
    <string name="browse">Browse</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="regulations">Regulations</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="back">Back</string>
    <string name="watched">Watched</string>
    <string name="filter">Filter</string>
    <string name="avatar_placeholder">User avatar</string>
    <string name="filter_movies">Filter movies</string>
    <string name="cover_image">Movie cover</string>
    <string name="nickname">Nickname</string>
    <string name="friend_list">Friend list:</string>
    <string name="number_of_movies_watched">Number of movies watched:</string>
    <string name="recently_watched">Recently watched:</string>
    <string name="add_friends">add friends</string>
    <string name="title">Title</string>
    <string name="friends_recent_activity">Friends recent activity</string>
    <string name="watched_with_count">Watched (%1$d)</string>
    <string name="rating">%1$d stars</string>
    <string name="todays_recommendations">Todays recommendations</string>


</resources>