<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/purple_123"
    android:padding="16dp">




    <LinearLayout
        android:id="@+id/headerRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

    android:layout_marginTop="40dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:contentDescription="@string/settings"
            app:tint="@android:color/white"/>

        <!-- odstęp między strzałką a trybikiem -->

        <Space
            android:layout_width="100dp"
            android:layout_height="0dp"/>

        <!-- Ikona koła zębatego -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"/>
    <!-- Odstęp między ikoną a tekstem -->
    <Space
        android:layout_width="5dp"
        android:layout_height="0dp"/>

    <!-- Tytuł “Settings” -->

        <ImageView
            android:id="@+id/ivGear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/settings"
            android:contentDescription="@string/settings"
            app:tint="@android:color/white"/>

</LinearLayout>

<LinearLayout
android:id="@+id/optionsContainer"
android:orientation="vertical"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="24dp"
android:layout_marginTop="32dp"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/headerRow">

<TextView
    android:id="@+id/tvRegulations"
    style="@style/SettingsItem"
    android:text="@string/regulations"/>

<TextView
    android:id="@+id/tvPrivacyPolicy"
    style="@style/SettingsItem"
    android:text="@string/privacy_policy"/>

<TextView
    android:id="@+id/tvPrivacySettings"
    style="@style/SettingsItem"
    android:text="@string/privacy_settings"/>

</LinearLayout>

<TextView
android:id="@+id/tvLogout"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/logout"
android:textColor="@android:color/white"
android:textSize="18sp"
android:layout_marginStart="24dp"
android:layout_marginBottom="48dp"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
